# prompting-press

./: .gitignore  .lsp.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  about.toml  apm.lock.yaml  apm.yml  deny.toml  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  ruff.toml  typos.toml
.agents/skills/catchup/: SKILL.md
.claude/: apm-hooks.json
.claude/agents/: adversarial-challenger.md  coder.md  parallel-coder.md  pr-reviewer.md  speckit-sync.md  speckit-verify.md
.claude/rules/: 06-delivery.md  45-bash-safety.md  45-git-safety.md  45-git-workflow.md  50-speckit-workflow.md
.codex/: config.toml  hooks.json
.codex/agents/: adversarial-challenger.toml  code-reviewer.toml  coder.toml  parallel-coder.toml  pr-reviewer.toml  security-auditor.toml  speckit-sync.toml  speckit-verify.toml  test-automator.toml
.github/workflows/: ci.yml  cla-assistant.yml  codeql.yml  docs.yml  release.yml
.moon/: workspace.yml
.serena/: project.yml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/memory/: DECISIONS.md  constitution.md  grill-notes-268-270-271.md  roadmap.md
ci/: about.hbs  moon.yml
conformance/derive-merge/: merge-variables.json
conformance/marshaling/: provenance-attributes.json
crates/prompting-press/: CHANGELOG.md  Cargo.toml  README.md
crates/prompting-press-core/: CHANGELOG.md  Cargo.toml  README.md
crates/prompting-press-node/: CHANGELOG.md  Cargo.toml
crates/prompting-press-node/src/: check.rs  compose.rs  error.rs  lib.rs  marshal.rs  prompt.rs  render.rs
crates/prompting-press-py/: CHANGELOG.md  Cargo.toml  build.rs
docs/research/: registry-value-and-object-model.md  roadmap.md
docs/site/: astro.config.mjs  moon.yml  package.json  pnpm-lock.yaml
docs/site/samples/python/: pyproject.toml
docs/site/samples/python-crewai/: pyproject.toml
docs/site/samples/python-crewai/examples/: integrations_crewai_fields.py
docs/site/samples/python-crewai/tests/: test_examples.py
docs/site/samples/python/examples/: getting-started_python_complete_example.py  getting-started_python_construct_from_definition.py  getting-started_python_construct_from_dict.py  getting-started_python_construct_from_text.py  getting-started_python_error_types.py  getting-started_python_render.py  getting-started_python_vars_model.py  guides_composition_append_validation.py  guides_composition_build.py  guides_composition_from_messages.py  guides_derive_add_variant.py  guides_derive_merge.py  guides_derive_render_variant.py  guides_derive_replace_body.py  guides_derive_revalidation_error.py  guides_derive_setup.py  guides_guard_construct.py  guides_guard_enable.py  guides_guard_fully_rendered.py  guides_guard_override_advisory.py  guides_guard_override_rejected.py  guides_guard_route_multi.py  guides_guard_route_single.py  guides_lint-in-ci_prompts-lint-test.py  guides_loader_custom.py  guides_loader_filesystem.py  guides_loader_formats.py  guides_loader_memory.py  guides_loader_miss.py  guides_metadata_reading_it_back.py  guides_variants_construct_inline.py  guides_variants_discover.py  guides_variants_select.py  integrations_langchain_messages.py  integrations_strands_partition.py
docs/site/samples/python/tests/: test_examples.py
integration/: moon.yml
integration/python/: README.md  pyproject.toml
integration/python/tests/: __init__.py  test_check.py  test_compose.py  test_construction.py  test_derive_merge.py  test_errors.py  test_guard.py  test_loader.py  test_provenance.py  test_render.py  test_version.py
integration/rust/: Cargo.toml  README.md
integration/rust/tests/: check.rs  compose.rs  construction.rs  derive_merge.rs  errors.rs  guard.rs  loader.rs  provenance.rs  render.rs  version.rs
integration/typescript/: README.md  biome.json  package.json  pnpm-lock.yaml
samples/: README.md  moon.yml
samples/python/greeter-cli/: pyproject.toml
samples/python/greeter-cli/src/greeter_cli/: __init__.py  main.py
samples/python/greeter-cli/tests/: test_feature_coverage.py
samples/rust/greeter-cli/: Cargo.toml
samples/rust/greeter-cli/src/: main.rs
samples/rust/greeter-cli/tests/: feature_coverage.rs
schemas/jsonschema/: prompt-definition.schema.json
scripts/: gen-root-changelog.mjs
scripts/ci/: check-advisories.sh  check-ffi-isolation.sh  check-floating-versions.sh  check-licenses-py.sh  check-licenses.sh  check-lint-py.sh  gen-third-party-licenses.sh  strip-first-party-licenses.py  test-python.sh
specs/001-foundations/: spec.md  tasks.md
specs/002-engine-kernel/: agent-assignments.yml  findings.fixed.md  qa-report.md  review-report.md  security-review-report-staged.md  task-T001-T002.report.md  task-T021-T025.report.md  task-T032-T033.report.md  task-T034-T035.report.md  task-T036.report.md  tasks.md
specs/003-rust-consumer/: findings.fixed.md  review-report.md  task-T003-T006.report.md  task-T012-T013.report.md  task-T021-T022.report.md  tasks.md
specs/004-python-binding/: quickstart.md  tasks.md
specs/005-ts-binding/: tasks.md
specs/008-api-schema-reshape/: tasks.md
specs/009-adversarial-fuzzing/: tasks.md
specs/010-docs-site/: tasks.md
specs/011-autogen-api-refs/: tasks.md
specs/012-docs-versioning/: plan.md  research.md  spec.md  tasks.md
specs/014-tested-doc-samples/: plan.md  spec.md  tasks.md
specs/015-guard-delimiting/: spec.md
specs/016-framework-integration-guides/: data-model.md  memory-synthesis.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-derive-merge-strategy/: data-model.md  memory-synthesis.md  memory.md  plan.md  quickstart.md  research.md  security-review-report.md  spec.md  tasks.md
specs/018-provenance-attributes/: data-model.md  memory-synthesis.md  plan.md  quickstart.md  research.md  security-review-report.md  spec.md  sync-conflicts-2026-07-08.md  tasks.md
specs/019-pluggable-loader/: data-model.md  memory-synthesis.md  plan.md  quickstart.md  research.md  security-review-report.md  spec.md  tasks.md
(+360 files in other folders)
