# prompting-press-node — the napi (Node-API) binding (FR-003).
# The second of exactly two crates allowed to depend on an FFI toolkit. `napi` and
# `napi-derive` live here and MUST NOT leak into the kernel or the Rust consumer
# (constitution Principle II / C-02); both are reached via their own path deps below.

[package]
name = "prompting-press-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Node.js binding (napi/Node-API) for Prompting Press."

# cdylib: the .node native addon loaded by the Node.js runtime.
[lib]
crate-type = ["cdylib"]

[dependencies]
prompting-press-core = { path = "../prompting-press-core" }
prompting-press = { path = "../prompting-press" }
# napi 3.x is the current Node-API binding line; `napi-derive` supplies the `#[napi]`
# attribute macro. Pinned EXACT (not floating "3") so the ci:check-floating-versions
# gate stays green. NOTE: the two crates version INDEPENDENTLY — crates.io latest 3.x
# verified 2026-06-24: napi = 3.9.4, napi-derive = 3.5.7. Marshaling-bridge features
# (e.g. serde-json) are added in T005 once verified against the napi 3.9.4 feature set.
napi = "3.9.4"
napi-derive = "3.5.7"
