# Pre-release integration gate: a real downstream consumer crate that exercises the
# full public API surface of prompting-press via path dependency before publish.
# Standalone crate (not a workspace member) — [workspace] prevents Cargo from
# enrolling it in the root virtual workspace, which only includes crates/* and
# samples/rust/* and has no place for a test-only crate.
[workspace]

[package]
name = "prompting-press-integration"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
# Path dependency mirrors samples/rust/greeter-cli — the pre-publish in-repo consumer.
prompting-press = { path = "../../crates/prompting-press" }
garde = { version = "0.23", features = ["derive", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
