# Doc-sample project (spec 014, standalone-program model).
#
# Every file under examples/ is a COMPLETE, standalone Python program that a docs
# page displays verbatim (via Astro `?raw` import) and that CI runs. There is no
# marker injection: the file the reader sees IS the tested artifact. The test
# runner executes each example (assertions are in-program); a failing example
# fails the gate citing its file.
[project]
name = "prompting-press-doc-samples"
version = "0.0.0"
requires-python = ">=3.12"
# Framework SDKs (langchain-core/langgraph, strands-agents, crewai) are
# dependencies of THIS doc-sample project ONLY — they let the integration
# examples type-check/run against the real SDK shapes. They are deliberately
# NOT dependencies of any shipped prompting-press-* package (the library stays
# framework-agnostic; the recipes are user-side glue shown in the docs).
dependencies = [
    "prompting-press",
    "pytest>=8",
    "langchain-core>=1.4,<2",
    "langgraph>=1.2,<2",
    "strands-agents>=1.45,<2",
    "crewai>=1.15,<2",
]

[tool.uv.sources]
prompting-press = { path = "../../../../packages/python", editable = true }

[tool.pytest.ini_options]
# Each example under examples/ is collected + executed by tests/test_examples.py.
testpaths = ["tests"]
